# Concept-Bottleneck-Transformers

./: .gitignore  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  cbt_cli.py  check_baseline.py  check_baseline_perplexity.py  concept_labels.json  pyproject.toml  run_analysis.py  run_experiments.py  run_full_experiment.py  run_tests.py  run_trained_experiments.py  test_labels.json
.cursor/rules/: deep-learning.mdc  persona.mdc  uv-package-manager.mdc
analysis/: bias_detection.py  causality_test.py  concept_editing_experiment.py  create_research_dashboard.py  cross_domain_testing.py  extract_contexts.py  extract_top_contexts.py  key_findings.md  real_llm_labeling.py  research_paper.md  research_paper_outline.md  research_summary.md  show_contexts.py  simple_analysis.py
cbt/: __init__.py  ablation_tools.py  advanced_losses.py  analyzer.py  concept_analysis.py  concept_layer.py  config.py  enhanced_labeling.py  evaluation.py  evaluator.py  experiments.py  llm_labeling.py  model.py  training.py
concept_analysis_results/: analysis_summary.json  concept_labels.json  mining_results.json
configs/: training.yaml
docs/: README.md
examples/: ablation_demo.py  advanced_training.py  basic_training.py  comprehensive_experiments_demo.py  concept_analysis_demo.py  evaluation_demo.py  granularity_sweep_demo.py  placement_study_demo.py  simple_concept_test.py  unmocked_demo.py  unmocked_demo_no_warning.py  wikitext_training.py
experiments/: robust_multi_seed_experiments.py  run_concept_analysis.py  run_full_experiment.py  run_trained_experiments.py  test_alternative_explanations.py
results/: .gitkeep  README.md
results/analysis/: test_analysis.json
results/analysis/concept_analysis/cbt_model_stab_kl_m32_k4_a30_20250810_223738/: analysis_metadata.json  concept_analysis_results.json
results/analysis/concept_analysis/cbt_model_stab_kl_m32_k4_a30_20250810_224243/: analysis_metadata.json  (+1 more)
results/analysis/concept_analysis_20250810_172119/: concept_analysis_results.json
results/experiments_20250810_160233/: cross_seed_stability_v2.json  experiment_summary.json  stabilization_kl_a30_results.json  stabilization_kl_results.json  stabilization_results.json
results/experiments_test_20250810_172119/: experiment_results.json
results/models/: test_model.pt
scripts/analysis/: analyze_concepts.py
scripts/management/: list_models.py  manage_results.py  organize_analysis.py  organize_project.py
scripts/utils/: cbt_cli.py
tests/: __init__.py  test_concept_layer.py  test_config.py  test_imports.py
trained_cbt_experiment_results_20250809_164939/: Cross Seed Stability v2.json  Experiment Summary.json  Stabilization KL Results.json  Stabilization Results.json
(+2 files in other folders)
