[project]
name = "cbt"
version = "0.1.0"
description = "Concept-Bottleneck Transformers - Adding sparse concept layers to transformer models"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "scikit-learn>=1.3.0",
    "einops>=0.6.0",
    "seaborn>=0.12.0",
    "pandas>=1.5.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "requests>=2.28.0",
    "python-dotenv",
    "datasets>=2.14.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cbt*"]
exclude = ["configs*", "experiments*", "scripts*", "docs*", "examples*", "tests*", "results*"]

[tool.setuptools.package-data]
cbt = ["*.py"]
